[project]
name = "qemu-raspi"
version = "0.1"
authors = [
    { name = "Juerg Haefliger", email = "juergh@proton.me" },
]
description = "Emulate a Raspberry Pi with QEMU"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "colorlog",
]

[project.urls]
Homepage = "https://github.com/juergh/qemu-raspi"
Issues = "https://github.com/juergh/qemu-raspi/issues"

[project.scripts]
qemu-raspi = "qemu_raspi:main"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
